# api/house/v3/openapi.yaml
@@ -70,6 +70,31 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /house/reserve:
+        post:
+            tags:
+                - House
+            description: 预约看房
+            operationId: House_ReserveHouse
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ReserveHouseRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ReserveHouseReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         GoogleProtobufAny:
@@ -108,6 +133,30 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/HouseRecommendItem'
+        ReserveHouseReply:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                message:
+                    type: string
+            description: 预约看房响应
+        ReserveHouseRequest:
+            type: object
+            properties:
+                landlordId:
+                    type: string
+                userId:
+                    type: string
+                userName:
+                    type: string
+                houseId:
+                    type: string
+                houseTitle:
+                    type: string
+                reserveTime:
+                    type: string
+            description: 预约看房请求
         Status:
             type: object
             properties:
